# inventory_management_system

./: Dockerfile  README.md  pyproject.toml
inventory management system/: main.py
